overflow fixes

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -24,7 +24,7 @@
     overflow: scroll;
   }
   .responsive-scrollable {
-  margin-left: max(calc(50% - 350px), 20px);
+  padding-left: max(calc(50% - 350px), 20px);
   overflow: scroll;
   }
   .w-full--1 {
